tests/ui/incorrect/01_bound_failure.stderr
error[E0277]: the trait bound `RefCell<u8>: ThreadSafe` is not satisfied
  --> tests/ui/incorrect/01_bound_failure.rs:13:10
   |
13 |     test(RefCell::new(10u8));
   |     ---- ^^^^^^^^^^^^^^^^^^ the trait `Sync` is not implemented for `RefCell<u8>`
   |     |
   |     required by a bound introduced by this call
   |
note: required for `RefCell<u8>` to implement `ThreadSafe`
  --> tests/ui/incorrect/01_bound_failure.rs:6:1
   |
 6 | / trait_set! {
 7 | |     pub trait ThreadSafe = Send + Sync;
   | |               ^^^^^^^^^^
 8 | | }
   | |_^
note: required by a bound in `test`
  --> tests/ui/incorrect/01_bound_failure.rs:10:12
   |
10 | fn test<T: ThreadSafe>(_t: T) {}
   |            ^^^^^^^^^^ required by this bound in `test`
   = note: this error originates in the macro `trait_set` (in Nightly builds, run with -Z macro-backtrace for more info)
